[project]
name = "langgraph-tutorial-wenwenc9"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.4.38",
    "jupyterlab>=4.4.9",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.10",
    "rich>=14.2.0",
    "tomlkit>=0.13.3",
    "volcengine>=1.0.205",
]
